--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body ng-controller="AppCtrl">
 
-    <div ng-view></div>
+    <div class="view" ng-view></div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+    <script src="app/bower_components/id3/id3.min.js"></script>
 
     <script src="app/bower_components/angular/angular.js"></script>
     <script src="app/bower_components/angular-route/angular-route.js"></script>
